# Upgrade-

./: .dockerignore  .env.example  .project-context.json  ADVERSARIAL_STRESS_REPORT.md  Dockerfile  Dockerfile.prod  ErrorBoundary  FINAL_TRUTH_REPORT.md  LICENSE  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_VERIFICATION_REPORT.md  README.md  SmartContracts.sol  ToastProvider (1)  _journal.json  cleanup-script.js  cleanup.sh  deploy-ultimate.sh  deploy.sh  dev_settings_v2.json  docker-compose.enterprise.yml  docker-compose.monitor.yml  docker-compose.prod.yml  docker-compose.scaled.yml  docker-compose.yml  generate_routers.py  generate_routers_v2.py  index.css  main.py  openapi.json  package-lock.json  package.json  procfile  pyproject.toml  setup.sh  supervisord.conf  template.json  test_routers.py  tsconfig.server.json  version.json
Hope-ai-skycoin4444-shadowchat--main/: package.json
backend/: .env.example  ai_feed_ranker.py  ai_moderation.py  config.py  database.py  livekit_config.py  main.py  node.py  node_livekit.py  package-lock.json  package.json  rate_limit.py  redis_cache.py  tsconfig.json
contracts/: SKY444.sol  deploy.js  hardhat.config.js  liquidity-pool.js
docs/: ARCHITECTURE.md  CHANGELOG.md  RELEASE_NOTES_V10.md
drizzle/: 0001_sparkling_robbie_robertson.sql  0002_settlement_ledger_hardening.sql  0003_beginner_plus_business_intents.sql  0004_supplier_marketplace_powerhouse.sql
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js  testconfig.json  tsconfig.json
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  (+1 more)
(+4152 files in other folders)
